Fixed spelling and clarified some things

--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,7 @@ In this paper, we use this reasoning into a two-step approach to help individual
 \subsubsection{Heat Stress}
 The impact of heat on the human body has long been a subject of study. Thermal comfort plays a key role, which describes climatic conditions consider comfortable. 
 
-\textcite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well-known indices that consider a complete human heat budget model are the following:
+\textcite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well-known indices that consider a complete human heat budget model are for instance:
 \begin{inparaenum}[(1)]
   \item \citeauthor{Steadman1979}'s heat index (\citeauthor{Steadman1979} \citeyear*{Steadman1979}, \citeyear*{Steadman1979a}),
   \item the predicted mean vote (PMV) \parencite{Fanger1973},
@@ -39,7 +39,7 @@ For all these indices the following meteorological parameters are important:
 Based on the availability of data, in this paper we will use \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature.
 
 \subsubsection{Health Optimal Pedestrian Routing}
-Several research projects have considered environmental factors for pedestrian routing in the paste, to find routes which are more healthy. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
+Several research projects have considered environmental factors for pedestrian routing in the paste, with the goal to find routes which are more healthy. For instance, \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015}.
 
 The NaviComf framework for pedestrian routing proposed by \textcite{Dang2013} enables to improve the comfort, considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors, like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological data used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
 
