--- a/evaluation.tex
+++ b/evaluation.tex
@@ -5,8 +5,8 @@
 
 \subsection{Data}
 \label{sec:data-sets}
-As map data, we use the data form the OpenStreetMap (OSM) project \parencite{OSMF2016}. 
-For temperature data we use the hourly air temperature and relative humidity values are originating from the weather station of the German Weather Service (Deutscher Wetterdienste, DWD) in Rheinstetten near Karlsruhe \parencite{DWD2016}. For a finer spatial resolution we use remote sensing data of a thermal scanner flight provided by the Nachbarschaftsverband Karlsruhe (NVK). The data set consists of two scans, recorded in the morning and in the evening of the 26 September 2008. The data are covering an area of  $\SI{25 805}{\meter} \times \SI{39 555}{\meter}$ (EW NS) and have a resolution of $5\,161 \times 7\,911$  pixels. The measured surface temperature is in the range of \SIrange{-1.7}{18.3}{\celsius} (morning and evening). The average surface temperature of the cropped data sets has been \SI{4.18}{\celsius} (morning) respectively \SI{11.24}{\celsius} evening.  
+As map data, we use the data from the OpenStreetMap (OSM) project \parencite{OSMF2016}. 
+For temperature data we use the hourly air temperature and relative humidity values originating from the weather station of the German Weather Service (Deutscher Wetterdienste, DWD) in Rheinstetten near Karlsruhe \parencite{DWD2016}. For a finer spatial resolution we use remote sensing data of a thermal scanner flight provided by the Nachbarschaftsverband Karlsruhe (NVK). The data set consists of two scans, recorded in the morning and in the evening of the 26 September 2008. The data are covering an area of  $\SI{25 805}{\meter} \times \SI{39 555}{\meter}$ (EW NS) and have a resolution of $5\,161 \times 7\,911$  pixels. The measured surface temperature is in the range of \SIrange{-1.7}{18.3}{\celsius} (morning and evening). The average surface temperature of the data sets cropped to the evaluated area is \SI{4.18}{\celsius} (morning) respectively \SI{11.24}{\celsius} (evening).  
 
 
 \subsection{Data Preparation}
@@ -24,7 +24,7 @@ T_{a}^{station}(t) + \delta_{ij}^{evening} & \text{if $12 \leq t < 24$,}
 \end{equation}
 where $T_{a}^{station}(t)$ is the air temperature measured at the weather station at time $t$ and $\delta^{morning}_{ij}$ respectively  $\delta^{evening}_{ij}$ is the deviation of the raster cell $c_{ij}$ from the mean of all raster cells from the morning respectively evening scan.
 
-We compute an approximation of Steadman's heat index with \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} we use the air temperature as a fall-back value. If the air temperature drops in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, then that comfort value will be used, because temperature below this threshold are not considered harmful. 
+We compute an approximation of Steadman's heat index as proposed by \textcite[77]{Stull2011}. Since the heat index is only defined for an air temperature between \SI{20}{\celsius} and \SI{50}{\celsius} we use the air temperature as a fall-back value. If the air temperature drops in a raster cell below a comfort threshold $T_a^{comfort}$ or $T_{HI}^{comfort}$, then that comfort value will be used, because temperature below this threshold are not considered harmful. 
 
 For the implementation of the routing we used the GraphHopper framework for Java \parencite{GraphHopper2016}.
 
@@ -81,12 +81,12 @@ As optimization algorithm, we use the implementation of Brent's method in the Ap
 \footnotetext{\url{http://www.openstreetmap.org/copyright}}
 }
 
-To evaluate the routing, we select 1000 random pairs of start and destinations points form the examined  area and 10 random dates from the period of 1 June to 31 August 2015. For each of the start destination pairs and each date we  perform the evaluation at 7:00, 11:00, 15:00, 19:00 and 23:00, so overall we had $50\,000$ samples. As benchmark we computed for each sample the shortest path. 
+To evaluate the routing, we select 1000 random pairs of start and destination points from the examined  area and 10 random dates from the period of 1 June to 31 August 2015. For each of the start destination pairs and each date we  perform the evaluation at 7:00, 11:00, 15:00, 19:00 and 23:00, so overall we have $50\,000$ samples. As benchmark we compute for each sample the shortest path. 
 
 
-An overview of our results is given in table \ref{tab:results-routing}. In many cases the heat exposure could be reduced. On average the heat exposure has been decreased by \SI{\sim 4.7}{\percent} while in the same time the distance was increased by at most \SI{5.76}{\percent} on average. In some cases, the heat exposure can be reduced by up to \SI{25}{\percent}. The weighted average of the thermal comfort measure can be reduced by \SI{\sim 2}{\celsius} on average. There are only slight differences between the air temperature and the heat index as measure for thermal comfort. 
+An overview of our results is given in table \ref{tab:results-routing}. In many cases the heat exposure can be reduced. On average the heat exposure is decreased by \SI{\sim 4.7}{\percent} while in the same time the distance increased by at most \SI{5.76}{\percent} on average. In some cases, the heat exposure is reduced by up to \SI{25}{\percent}. The weighted average of the thermal comfort measure can be reduced by \SI{\sim 2}{\celsius} on average. There are only slight differences between the air temperature and the heat index as measure for thermal comfort. 
 
-In the example given in figure \ref{fig:route-example} the heat exposure could be reduced by \SI{17.64}{\percent} (\emph{temperature}) and \SI{18.76}{\percent} (\emph{heatindex}), while at the same time the distance only increased by  \SI{0.53}{\percent}.
+In the example given in figure \ref{fig:route-example} the heat exposure is reduced by \SI{17.64}{\percent} (\emph{temperature}) and \SI{18.76}{\percent} (\emph{heatindex}), while at the same time the distance only increases by  \SI{0.53}{\percent}.
 
 \subsubsection{Optimal Time}
 
@@ -115,11 +115,11 @@ In the example given in figure \ref{fig:route-example} the heat exposure could b
 	\label{fig:optimaltime-route-example}
 \end{figure}
 
-For the evaluation of optimal time finding procedure we selected 750 random start points. One of the following four search criteria has been assigned to each of the start points at random: supermarket, bakery, chemist or pharmacy. For each of the start points a random start time $t_{now}$ has been selected from the period of 8:00 to 20:00. The radius has been set to \SI{1000}{\meter} for all start points and the maximum number of results has been set to 5. Additionally, for all start points a time buffer $t_{buff}$ of 15 minutes has been assumed. 
+For the evaluation of optimal time finding procedure we selected 750 random start points. Afterwards, One of the following four search criteria is assigned to each of the start points at random: supermarket, bakery, chemist or pharmacy. For each of the start points a random start time $t_{now}$ is selected from the period of 8:00 to 20:00. The radius is set to \SI{1000}{\meter} for all start points and the maximum number of results is set to 5. Additionally, for all start points a time buffer $t_{buff}$ of 15 minutes is assumed. 
 
 As a reference solution, we use the closest location found during the nearby search, compute the shortest path from the starting point to this location and evaluated the heat exposure at time $t_{now}$. 
 
 The results for the combined approach are given in table \ref{tab:results-optimal-time}. Here the average reduction compared to the routing approach is significantly higher. This is expected as the heat exposure can vary strongly with the time of the day. 
 
-In the example given in figure \ref{fig:optimaltime-route-example} the \emph{temperature} weighting selected the same pharmacy and optimal point in time (9:27) as the reference solution. Contrary the \emph{heatindex} weighting selected a different pharmacy which is \SI{476.6}{\meter} instead of  \SI{434.5}{\meter} away from the start. Additional the method found a different optimal time (19:39) and those the heat exposure could be reduced by \SI{18.49}{\percent}.  
+In the example given in figure \ref{fig:optimaltime-route-example} the \emph{temperature} weighting selected the same pharmacy and optimal point in time (9:27) as the reference solution. Contrary the \emph{heatindex} weighting selected a different pharmacy which is \SI{476.6}{\meter} instead of  \SI{434.5}{\meter} away from the start. Additional the method found a different optimal time (19:39) and those the heat exposure is reduced by \SI{18.49}{\percent}.  
  
