--- a/figures/optimaltime_route_example.tex
+++ b/figures/optimaltime_route_example.tex
@@ -1058,13 +1058,13 @@
 \path[clip] (  0.00,  0.00) rectangle (361.35,234.88);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.88] at (272.62,121.83) {routing.heatindex};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.88] at (272.62,121.83) {heatindex};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (361.35,234.88);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.88] at (272.62,107.37) {routing.temperature};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.88] at (272.62,107.37) {temperature};
 \end{scope}
 \end{tikzpicture}
 
