--- a/introduction.tex
+++ b/introduction.tex
@@ -23,9 +23,9 @@ The impact of heat on the human body has long been a subject of study. Thermal c
 \textcite{Staiger1997} state that only a complete heat budget model of the human body is sufficient to make any reliable statements regarding the influence of heat on the body. Some well-known indices that consider a complete human heat budget model are for instance:
 \begin{inparaenum}[(1)]
   \item \citeauthor{Steadman1979}'s heat index (\citeauthor{Steadman1979} \citeyear*{Steadman1979}, \citeyear*{Steadman1979a}),
-  \item the predicted mean vote (PMV) \parencite{Fanger1973},
+  \item the predicted mean vote \parencite[PMV,][]{Fanger1973},
   \item the perceived temperature \parencite{Staiger1997,Jendritzky2000},
-  \item and the universal thermal climate Index UTCI \parencite{Jendritzky2010}.
+  \item and the universal thermal climate index UTCI \parencite{Jendritzky2010}.
 \end{inparaenum}
 
 For all these indices the following meteorological parameters are important:
